# hephaestus-agentic-maintenance

./: .gitignore  .pre-commit-config.yaml  ANALYSIS_20_RCA_REACT_AGENT.md  EVIDENCE_LEDGER_FIXES.md  EVIDENCE_LEDGER_IMPLEMENTATION_SUMMARY.md  EVIDENCE_LEDGER_USAGE.md  Makefile  PROCEDURE_CHECKPOINT_IMPLEMENTATION.md  QUESTIONS.md  RCA_AGENT_IMPROVEMENTS.md  README.md  TIER1_IMPROVEMENTS.md  docker-compose.yml  pyproject.toml  pyrightconfig.json  test_multi_agent_state.py
.github/: ci.yml
.qdrant_data/: raft_state.json
apps/api/: Dockerfile  app.py  pyproject.toml
apps/api/evals/: eval.py  eval_agents.py
apps/api/src/agents/: agents.py  graph.py  retrieval_generation.py  tools.py
apps/api/src/agents/agentic_rag/: agents.py  graph.py  retrieval_generation.py  tools.py
apps/api/src/agents/agentic_rag/utils/: prompt_management.py
apps/api/src/agents/core/: auth.py  checkpointer.py  llm.py  prompts.py  sse.py
apps/api/src/agents/multi_agent/: __init__.py  config.py  edges.py  graph.py  loader.py  nodes.py  sessions.py  states.py  stream.py  supervisor.py  tool_groups.py  workspace.py
apps/api/src/agents/multi_agent/prompts/: coordinator.yml  rca_troubleshooting.yml  summarizer.yml
apps/api/src/agents/multi_agent/registry/: summarizer.yaml  troubleshooting.yaml
apps/api/src/agents/prompts/: intent_router.yml  retrieval_generation.yml
apps/api/src/agents/tools/: tools_auth.py
apps/api/src/agents/utils/: promp_management.py  prompt_management.py  workspace.py
apps/api/src/api/: endpoints.py  models.py
apps/api/src/api/processors/: submit_feedback.py
apps/api/src/core/: config.py
apps/chatbot_ui/: Dockerfile  app.py  pyproject.toml
apps/db_mcp_server/: Dockerfile  main.py  pyproject.toml
apps/db_mcp_server/src/db_mcp_server/: __init__.py
apps/db_mcp_server/src/db_mcp_server/core/: config.py
configs/: config.yml
configs/workspaces/: ws_test_001.yml
docs/: architecture.md  maintenance-agent-guide.md
notebooks/: 01-exploration.ipynb  02-rag-preprocessing-interventions.ipynb  03-rag-pipeline.ipynb  04-rag-eval-dataset.ipynb  05-rag-evals.ipynb  06-rag-pipeline-structured.ipynb  07-hybrid-retrieval.ipynb  08-reranking.ipynb  09-prompt-management.ipynb  10-langgraph-intro.ipynb  11-query-rewriting.ipynb  12-query-router.ipynb  13-agent-single-turn-instructor.ipynb  14-agent-single-turn-langchain.ipynb  15-agent-multi-turn-langchain.ipynb  16-agent-multiple-tools.ipynb  18-mcp.ipynb  19-state-streaming.ipynb  20-failure-mode-implementation.md  20-rca-agent-minimal-langgraph copy.ipynb  20-rca-agent-minimal-langgraph.ipynb  20-rca-agent-minimal.ipynb  20-rca-agent.ipynb  20-rca-react-agent.ipynb  20-rca-react-coordinator-agent copy.ipynb  20-rca-react-coordinator-agent.ipynb  20-rca-react-summarizer-agent.ipynb  20-rca-react-troubleshooting-agent-simple-report.md  20-rca-react-troubleshooting-agent-simple.ipynb  20-rca-react-troubleshooting-agent.ipynb  21-knowledge-graph-rca-agent.ipynb  21-rca-coaching-guide.md  21-rca-troubleshooting-simple.ipynb  27-summarizer-langgraph.ipynb  28-hephaestus-multi-agent.ipynb  30-agent-eval-dataset.ipynb  exploration.ipynb  results.csv  synthetic_eval_dataset.csv
notebooks/exercises/: 01-langgraph-basics.md  02-agent-graph-tool-calling.md  03-query-rewriting.md  04-query-router.md
notebooks/prompts/: rca_react_system_prompt.yml  retrieval_generation.yml
notebooks/tools/: tools.py
notebooks/utils/: prompt_management.py  (+1 more)
scripts/: init_sensor_db.sql  load_sensor_data.py  orchestrate_pipeline.py
(+35 files in other folders)
