[project]
name = "hephaestus-agentic-maintenance"
version = "0.1.0"
description = "This is agentic system for maintenance."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=7.1.0",
    "openai>=2.15.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "python-dotenv>=1.2.1",
    "streamlit>=1.52.2",
    "matplotlib>=3.10.8",
    "seaborn>=0.13.2",
    "pandas>=2.3.3",
    "qdrant-client>=1.17.1",
    "fastapi>=0.135.2",
    "langsmith>=0.7.22",
    "ragas>=0.4.3",
]

[tool.uv.workspace]
members = ["apps/api", "apps/chatbot_ui"]
