[project]
name = "api"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.135.2",
    "pydantic-settings>=2.12.0",
    "python-dotenv>=1.2.1",
    "openai>=2.15.0",
    "qdrant-client>=1.17.1",
    "uvicorn[standard]>=0.34.0",
    "langsmith>=0.7.22",
    "instructor>=1.14.5",
    "cohere>=5.21.1",
]

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/api", "src/agents", "src/core"]
