[project]
name = "api"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.135.2",
    "pydantic-settings>=2.12.0",
    "python-dotenv>=1.2.1",
    "openai>=2.15.0",
    "qdrant-client>=1.17.1",
    "uvicorn[standard]>=0.34.0",
    "langsmith>=0.7.22",
    "instructor>=1.14.5",
    "cohere>=5.21.1",
    "pyyaml>=6.0.3",
    "langchain-openai>=0.3.0",
    "langgraph>=0.4.0",
    "jinja2>=3.1.0",
    "psycopg[binary]>=3.3.3",
    "langgraph-checkpoint-postgres>=3.0.5",
    "sqlalchemy>=2.0.48",
    "pandas>=2.3.3",
    "psycopg2-binary>=2.9.11",
    "tabulate>=0.10.0",
]

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/api", "src/agents", "src/core"]
